--- a/404.html
+++ b/404.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <footer class="footer">
-    Powered by <a href="https://gridea.dev" target="_blank">Gridea</a>
+    Powered by <a href="https://cloud.idarian.com" target="_blank">达里安云</a>
   </footer>
   <script>
     var back = document.getElementById('back')
